fix: transfer scrollbar webkit classnames in scrollbar-hide and default classes

--- a/src/styles.css
+++ b/src/styles.css
@@ -95,17 +95,17 @@ body {
 .scrollbar-hide {
     -ms-overflow-style: none;
     scrollbar-width: none;
+}
 
-    &::-webkit-scrollbar {
-        display: none,
-    }
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
 }
 
 .scrollbar-default {
     -ms-overflow-style: auto;
     scrollbar-width: auto;
+}
 
-    &::-webkit-scrollbar {
-        display: block;
-    }
+.scrollbar-default::-webkit-scrollbar {
+    display: block;
 }
